# PerfAdvisor

./: .gitignore  CLAUDE.md  LEON.md  LICENSE  README.md  changelog.txt  done.md  other_ideas.md  pyproject.toml  todo_list.md
.claude/: settings.local.json
bench/: Makefile  README.md  build.sh  ground_truth_meta.json  submit_1gpu.sbatch  submit_4gpu.sbatch  submit_8gpu.sbatch  synthetic_cuda_benchmark.cu
bench/cuda/: build.sh  submit_1gpu.sbatch  submit_4gpu.sbatch  submit_8gpu.sbatch  synthetic_cuda_benchmark.cu
bench/hip/: build_hip.sh  submit_1gpu_hip.sbatch  submit_4gpu_hip.sbatch  submit_8gpu_hip.sbatch  synthetic_hip_benchmark.cpp
docs/: README.md  _rocpd_schema_observed.sql  cross_rank_analysis.md  phase_detection.md  pipeline.md  profile_formats.md  prompt_caching.md  rocpd_schema_notes.md
nsight_agent/: __init__.py  __main__.py
nsight_agent/agent/: compare.py  logger.py  loop.py  preflight.py  tools.py
nsight_agent/analysis/: diff.py  metrics.py  models.py  phases.py
nsight_agent/ingestion/: __init__.py  profile.py
perf_advisor/: __init__.py  __main__.py
perf_advisor/agent/: compare.py  logger.py  loop.py  preflight.py  tools.py
perf_advisor/analysis/: __init__.py  _utils.py  cross_rank.py  diagnostics.py  diff.py  metrics.py  models.py  phases.py
perf_advisor/eval/: __init__.py  discover.py  report.py  scorer.py
perf_advisor/ingestion/: __init__.py  base.py  detect.py  nsys.py  profile.py  rocpd.py
tests/: conftest.py  test_analysis.py  test_cpu_sync.py  test_cross_rank.py  test_detect.py  test_diagnostics.py  test_eval_discover.py  test_eval_scoring.py  test_format_parity.py  test_hypothesis_validation.py  test_ingestion.py  test_interval_union.py  test_phase_window_clipping.py  test_profile_integrity.py  test_rocpd_ingestion.py  test_rocpd_metrics.py  test_rocpd_schema.py  test_synthetic.py  test_tool_caching.py  test_variance.py
