[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perf-advisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "rich>=13.0",       # pretty console output for analysis reports
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-generativeai>=0.5",
]

[project.scripts]
perf-advisor = "perf_advisor.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
