[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perf-advisor"
version = "0.1.0"
description = "AI agent for analyzing GPU/accelerator performance profiles in HPC applications."
license = { file = "LICENSE" }
authors = [{ name = "Leon Hostetler", email = "leonhost@iu.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "rich>=13.0",       # pretty console output for analysis reports
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-genai>=1.0",
]

[project.urls]
Homepage = "https://github.com/leonhostetler/PerfAdvisor"
Source = "https://github.com/leonhostetler/PerfAdvisor"
Issues = "https://github.com/leonhostetler/PerfAdvisor/issues"

[project.scripts]
perf-advisor = "perf_advisor.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
